Bug 472305 - kde-gtk-config sets "scaling-factor" to an int, not a uint
Summary: kde-gtk-config sets "scaling-factor" to an int, not a uint
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_style (other bugs)
Version First Reported In: 5.27.7
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-07-16 19:39 UTC by Miles B Huff
Modified: 2023-10-03 08:14 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Miles B Huff 2023-07-16 19:39:55 UTC
SUMMARY
  kded5   g_settings_set_value: key 'scaling-factor' in 'org.gnome.desktop.interface' expects type 'u', but a GVariant of type 'i' was given


STEPS TO REPRODUCE
0. Have KDE set to support GNOME applications
1. Set your scaling factor to a non-integer

OBSERVED RESULT
Error when setting scaling factor in GNOME

EXPECTED RESULT
No such error.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20230714
KDE Plasma Version: 5.27.6
KDE Frameworks Version: 5.108.0
Qt Version: 5.15.10
Kernel Version: 6.4.2-1-default (64-bit)
Graphics Platform: X11
Processors: 16 × Intel® Core™ i7-10870H CPU @ 2.20GHz
Memory: 31.2 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2
Manufacturer: System76
Product Name: Oryx Pro
System Version: oryp7
Comment 1 ltstarwarskid 2023-07-20 15:13:49 UTC
I'm running under Wayland, so I'm not certain if this is the same bug ultimately, but I also get this, and I believe I can force it to happen even with scale set to 100% if I set the following environmental variable:

QT_WAYLAND_FORCE_DPI=physical

Forcing font DPI also seems to potentially trigger it. 

The error log also says user@1000.service is the origin for me instead of kded5 directly.


Operating System: Kubuntu 23.04
KDE Plasma Version: 5.27.6
KDE Frameworks Version: 5.108.0
Qt Version: 5.15.8
Kernel Version: 6.3.13-060313-generic (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 5800X3D 8-Core Processor
Memory: 31.2 GiB of RAM
Graphics Processor: Radeon RX 7900 XTX
Product Name: X570 Creator
Comment 2 Nate Graham 2023-09-08 19:54:33 UTC
Can you clarify what you mean by "Error when setting scaling factor in GNOME"? Where do you see this message? Is it causing any problems?

That said, seems like we can just use a uint here, no problem.
Comment 3 Bug Janitor Service 2023-09-08 19:57:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kde-gtk-config/-/merge_requests/91
Comment 4 Bug Janitor Service 2023-09-12 09:22:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kde-gtk-config/-/merge_requests/93
Comment 5 Fushan Wen 2023-09-12 09:37:33 UTC
Git commit bfb0896d3c88ee6f57eab0fd9e84010da304ea81 by Fushan Wen.
Committed on 12/09/2023 at 11:36.
Pushed by fusionfuture into branch 'Plasma/5.27'.

Set GTK scale-factor value as a uint

Co-authored-by: Nate Graham <nate@kde.org>
FIXED-IN: 5.27.8

M  +2    -0    kded/config_editor/gsettings.cpp
M  +1    -1    kded/gtkconfig.cpp

https://invent.kde.org/plasma/kde-gtk-config/-/commit/bfb0896d3c88ee6f57eab0fd9e84010da304ea81
Comment 6 Fushan Wen 2023-10-03 08:14:35 UTC
Git commit 415a0f6351e43a14e703e51d57a1f3baf82d20f0 by Fushan Wen.
Committed on 03/10/2023 at 10:05.
Pushed by fusionfuture into branch 'master'.

Set GTK scale-factor value as a uint

Co-authored-by: Nate Graham <nate@kde.org>
FIXED-IN: 5.27.8
(cherry picked from commit bfb0896d3c88ee6f57eab0fd9e84010da304ea81)

M  +2    -0    kded/config_editor/gsettings.cpp
M  +1    -1    kded/gtkconfig.cpp

https://invent.kde.org/plasma/kde-gtk-config/-/commit/415a0f6351e43a14e703e51d57a1f3baf82d20f0