Set GTK scale-factor value as a uint

BUG: 472305
FIXED-IN: 6.0