kded/gtkconfig.cpp
@@ -222,7 +222,7 @@ void GtkConfig::setEnableAnimations() const
 
 void GtkConfig::setGlobalScale() const
 {
-    const int scaleFactor = configValueProvider->x11GlobalScaleFactor();
+    const uint scaleFactor = configValueProvider->x11GlobalScaleFactor();
     XSettingsEditor::setValue(QStringLiteral("Gdk/WindowScalingFactor"), scaleFactor);
     GSettingsEditor::setValue("scaling-factor", scaleFactor); // For IntelliJ IDEA
 }
